--- a/emacs.org
+++ b/emacs.org
@@ -50,7 +50,7 @@
 
      ;; save customization elsewere
      (setq custom-file "~/.emacs.d/custom.el")
-     (load custom-file)
+     (load custom-file t)
 
      ;; backup settings
 
@@ -1786,6 +1786,10 @@ tools to handle text files, to test later.
                              :files ("lean4-mode/lean4*.el"))
        ;; to defer loading the package until required
        :commands (lean4-mode))
+   #+end_src
+** nix
+   #+begin_src emacs-lisp :tangle yes
+     (use-package nix-mode)
    #+end_src
 
    #+RESULTS:
