--- a/emacs.org
+++ b/emacs.org
@@ -1529,7 +1529,9 @@ tools to handle text files, to test later.
      ;; (use-package aweshell
      ;;   :load-path "~/.emacs.d/aweshell/aweshell.el")
 
-     (use-package vterm)
+     (use-package vterm
+       :config
+       (setq vterm-always-compile-module t))
 
      (use-package shx)
    #+END_SRC
@@ -1597,6 +1599,8 @@ tools to handle text files, to test later.
      (use-package gscholar-bibtex)
 
      (use-package pdf-tools
+       :straight (pdf-tools :pre-build ("./server/autobuild")
+                            :files (:defaults "server/epdfinfo"))
        :config
        (pdf-tools-install))
 
