--- a/emacs.org
+++ b/emacs.org
@@ -1542,7 +1542,7 @@ tools to handle text files, to test later.
      ;;   :load-path "~/.emacs.d/aweshell/aweshell.el")
 
      (use-package vterm
-       :straight (:pre-build ("mkdir" "-p" "build" "&&" "cd" "build" "&&" "cmake" "-DUSE_SYSTEM_LIBVTERM=yes" ".." "&&" "make")))
+       :straight (:pre-build ("mkdir" "-p" "build" "&&" "cd" "build" "&&" "cmake" "-DUSE_SYSTEM_LIBVTERM=yes" "-DLIBVTERM_INCLUDE_DIR=~/.nix-profile/include" "-DLIBVTERM_LIBRARY=~/.nix-profile/lib/libvterm.so" ".." "&&" "make")))
 
      (use-package shx)
    #+END_SRC
