--- a/emacs.org
+++ b/emacs.org
@@ -1549,7 +1549,7 @@ tools to handle text files, to test later.
                                "-DLIBVTERM_INCLUDE_DIR\=\~/.nix-profile/include"
                                "-DLIBVTERM_LIBRARY\=\~/.nix-profile/lib/libvterm.so"
                                "..")
-                              ("make")))
+                              ("make"))))
 
      (use-package shx)
    #+END_SRC
